--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -148,7 +148,9 @@ On peut remarquer sur ces premiers résultats, que la précision progresse très
 
 \section{Conclusion}
 Cette première implémentation intuitive permet ainsi d'obtenir des résultats très satisfaisants, allant jusqu'à 90\% de réussite sur le problème de	 MNIST. De plus, elle met en évidence le fonctionnement d'un réseau de neurones. Cependant, on remarque que les calculs ne sont pas du tout optimisés. Cela explique que le temps d'exécution devient rapidement très long. Dans l'exemple de l'application à l'ensemble de données MNIST, entraîner plusieurs fois le réseau sur l'ensemble d'apprentissage permettrait d'obtenir de bien meilleurs résultats, mais cela prendrait alors beaucoup trop de temps pour être véritablement envisageable.
-Afin d'améliorer le temps de calcul et d'optimiser l'algorithme, nous nous sommes intéressés à une nouvelle approche des réseaux neuronaux basée sur les Computational Graphs, ou Graphes de calculs.
+Afin d'améliorer le temps de calcul et d'optimiser l'algorithme, nous nous sommes intéressés à une nouvelle approche des réseaux de neurones basée sur les graphes de calculs.
+
+\include{chapitre3}
 
 \chapter{Études des paramètres}
 
@@ -308,88 +310,12 @@ Nous avons alors étudié l'apprentissage du réseau pour des taux d'apprentissa
 Nous pouvons alors distinguer trois cas reflétant les principaux comportements :
 
 \begin{itemize}
-
 \item Pour un taux d'apprentissage de 0.01, la convergence est très lente mais sans oscillations. Si la précision obtenue peut-être à hauteur des autres taux d'apprentissage en utilisant plus d'exemples, on peut considérer celui-ci trop petit.
 \item Pour un taux d'apprentissage de 100, la convergence est très rapide au début, mais oscille beaucoup et va finalement bloquer l'apprentissage vers un autre minimum local de coût non désiré. On peut donc considérer ce taux d'apprentissage comme trop grand.
 \item Pour un taux d'apprentissage de 0.1, il semble apparaître un bon compromis entre stabilité et vitesse de la convergence. C'est cette valeur qui en général sera choisie pour les tests, bien que d'autres soient satisfaisants (0.8 ou 1 par exemple).
-
 \end{itemize}
 
-\include{chapitre3}
-
-\chapter{Réseaux de neurones récurrents}
-\section{Motivation}
-Nous avons pu voir que les réseaux feedforward peuvent être utilisés afin d'appendre à générer la sortie voulu en fonction de l'entrée du réseau. 
-Néanmoins, ces réseaux sont limités à des entrées et des sorties de tailles fixes. De plus il ne peuvent gérer des réseaux présentant des cycles. On utilise alors des réseaux récurrents qui permettent un traitement plus efficace des séquences de données. On pourra ainsi prévoir la suite d'une séquence.
-
-Nous nous intéresserons à deux algorithmes permettant l'apprentissage des réseaux récurrents : Real Time Recurrent Learning (RTRL) et Back Propagation Through Time (BPTT).
-
-\section{Dépliage}
-
-Nous avons dit précédemment qu'un réseau de neurones récurrent est un réseau possédant des cycles. Néanmoins, il est difficile d'imaginer que la valeur de sortie d'un neurone au temps $t$ dépende de la sortie de ce même neurone au temps $t$. Pour résoudre ce problème, nous allons ajouter une dimension temporelle à nos réseaux et permettre aux neurones au temps $t$ de dépendre des valeurs d'autres neurones au temps $t-1$.
-
-Afin de mettre en évidence cette dépendance temporelle sur nos graphes, les arêtes reliant la sortie d'un neurone au temps $t-1$ à un neurone au temps $t$ vont être annontées par un carré comme sur la figure \ref{arete_retard}. On les appelera arête "retard".
-
-% Insérer figure avec une arête retard
-
-On a alors de nouvelles équations pour la sortie du neurone $j$ :
-\begin{equation}
-\left\{
-\begin{array}{ll}
-t = 0, & y_j(t) = 0 \\
-\forall t \geq 1, & y_{j}(t) = g_{j}(\sum_{i \in Pa_t(j)}{w_{ji}y_{i}(t)} + \sum_{i \in Pa_{t-1}(j)}{w'_{ji}y_{i}(t-1)})
-\end{array}
-\right.
-\end{equation}
-où $Pa_t(j)$ est l'ensemble des neurones ayant une arête allant vers $j$ au temps $t$ et $Pa_{t-1}(j)$ l'ensemble des neurones ayant une arête "retard" allant vers $j$.
-
-Une manière commode de mettre en évidence cette dépendance temporelle est de déplier le graphe. 
-
-% Insérer figure avec les instants t-1, t et t+1 d'un réseau
-
-On peut même pour une séquence d'entrée donnée modéliser tous les calculs du réseau sans aucun cycle si on déplie le réseau un nombre suffisant de fois.
-
-% Insérer figure avec le réseau déplier pour une séquence d'entrée
-
-
-\section{RTRL}
-
-\section{BPTT}
-
-\section{Évaluation}
-
-\subsection{Grammaire de Reber}
-
-Dans un premier temps, nous comparerons ces algorithmes sur l'apprentissage de la grammaire de Reber, qui est régulière. Nous utiliserons la grammaire simple présentée sur la figure \ref{Grammaire de Reber simple}.
-
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.3]{images/reber_simple.png}
-\caption{Automate reconnaissant la grammaire de Reber simple}
-\label{Grammaire de Reber simple}
-\end{center}
-\end{figure}
-
-A l'aide de cette automate, nous générerons deux ensembles de mots respectivement afin d'entraîner et de tester notre futur réseau. L'objectif du réseau sera alors d'apprendre cette grammaire afin de prédire les caractères possibles après un caractère donné.
-
-L'étape suivante consistera à tester les algorithmes sur l'apprentissage de la grammaire de Reber symmétrique présentée sur la figure \ref{Grammaire de Reber symmétrique}.  
-\begin{figure}[h!]
-\begin{center}
-\includegraphics[scale=0.5]{images/reber_symmetrique.png}
-\caption{Automate reconnaissant la grammaire de Reber symmétrique}
-\label{Grammaire de Reber symmétrique}
-\end{center}
-\end{figure}
-
-Dans cette situation, le réseau devra être capable de se souvenir d'un état passé (T ou P) afin de prédire le nouvel état (T ou P). Cet état passé pourra être plus ou moins lointain en fonction de la taille de la grammaire de Reber insérée au milieu. 
-\bigbreak
-\bigbreak
-
-\subsection{Shakespeare}
-
-Enfin, nous appliquerons ces deux algorithmes à l'apprentissage de textes de Shakespeare. L'objectif sera alors de générer un texte anglais cohérent.
-
-\section{Comparaison des deux algorithmes}
+\include{chapitre5}
 
 \chapter{Long Short-Term Memory (LSTM)}
 \section{Motivation}
