--- a/chapitre5.tex
+++ b/chapitre5.tex
@@ -1,9 +1,12 @@
 \chapter{Réseaux de neurones récurrents}
+
 \section{Motivation}
-Nous avons pu voir que les réseaux feedforward peuvent être utilisés afin d'appendre à générer la sortie voulue en fonction de l'entrée du réseau. 
+
+Nous avons pu voir que les réseaux feedforward peuvent être utilisés afin d'appendre à prédire la sortie voulue en fonction de l'entrée du réseau. 
+
 Néanmoins, ces réseaux sont limités à des entrées et des sorties de tailles fixes. De plus il ne peuvent gérer des réseaux présentant des cycles. On utilise alors des réseaux récurrents qui permettent un traitement plus efficace des séquences de données. On pourra ainsi faire de la prédiction et de la génération de séquence.
 
-Dans un premier, nous verrons comment modéliser ces réseaux récurrents. Puis nous nous intéresserons à deux algorithmes d'optimisation permettant l'apprentissage des réseaux récurrents : Real Time Recurrent Learning (RTRL) et Back Propagation Through Time (BPTT).
+Dans un premier, nous verrons comment modéliser ces réseaux récurrents. Puis nous nous intéresserons à deux algorithmes d'optimisation permettant l'apprentissage des réseaux récurrents : real time recurrent learning (RTRL) et backpropagation through time (BPTT).
 
 \section{Dépliage}
 
@@ -11,26 +14,43 @@ Nous avons dit précédemment qu'un réseau de neurones récurrent est un résea
 
 Afin de mettre en évidence cette dépendance temporelle sur nos graphes, les arêtes reliant la sortie d'un neurone au temps $t-1$ à un neurone au temps $t$ vont être annotées par un carré comme sur la figure \ref{arete_retard}. On les appelera arête "retard".
 
-% Insérer figure avec une arête retard
+\begin{figure}
+\begin{center}
+\input{images/chapter5/recurrent_edge.tex}
+\caption{Réseau de neurones récurrent où l'arête avec un carré signifie que le n\oe{}ud $h$ prend sa valeur au temps $t-1$ comme entrée au temps $t$.}
+\label{arete_retard}
+\end{center}
+\end{figure}
 
-On a alors de nouvelles équations pour la sortie du neurone $j$ :
-\begin{equation}
-\left\{
-\begin{array}{ll}
-t = 0, & y_j(t) = 0 \\
-\forall t \geq 1, & y_{j}(t) = g_{j}(\sum_{i \in Pa_t(j)}{w_{ji}y_{i}(t)} + \sum_{i \in Pa_{t-1}(j)}{w'_{ji}y_{i}(t-1)})
-\end{array}
-\right.
-\end{equation}
-où $Pa_t(j)$ est l'ensemble des neurones ayant une arête allant vers $j$ au temps $t$ et $Pa_{t-1}(j)$ l'ensemble des neurones ayant une arête "retard" allant vers $j$.
+On peut maintenant remarquer que pour une séquence $x_1, ..., x_n$ le réseau récurrent de la figure \ref{arete_retard} est équivalent au réseau feedforward de la figure \ref{reseau_deplie}.
 
-Une manière commode de mettre en évidence cette dépendance temporelle est de déplier le graphe. 
+\begin{figure}
+\begin{center}
+\input{images/chapter5/unfolded_graph.tex}
+\caption{Réseau de neurones feedforward équivalent au réseau récurrent de la figure \ref{arete_retard} pour la séquence d'entrée $x_1, ..., x_n$.}
+\label{reseau_deplie}
+\end{center}
+\end{figure}
 
-% Insérer figure avec les instants t-1, t et t+1 d'un réseau
+Le processus de passage d'un réseau récurrent à un réseau feedforward s'appelle dépliage.
 
-On peut même pour une séquence d'entrée donnée modéliser tous les calculs du réseau sans aucun cycle si on déplie le réseau un nombre suffisant de fois.
+Une fois le réseau déplié obtenu, on peut utiliser l'algorithme de propagation classique pour les graphes de calculs afin de calculer la sortie du réseau récurrent.
 
-% Insérer figure avec le réseau déplier pour une séquence d'entrée
+Nous avons utilisé trois méthodes pour générer des réseaux dépliés. La première prend en entrée un réseau récurrent avec des arêtes retards et obtient le dépliage à partir de celui-ci.
+
+La seconde prend en entrée un \textit{layer}, représenté figure \ref{layer}, c'est-à-dire le sous-graphe qui va être copié à chaque pas de temps et le clone autant de fois qu'il le faut.
+
+\begin{figure}
+\begin{center}
+\input{images/chapter5/layer.tex}
+\caption{Représentation d'un layer. Il contient les n\oe{}uds du graphe à un temps $t$. Il prend en entrée la sortie de l'état caché du temps $t-1$ appelée $h_{in}$ et l'entrée $x_t$. Il a comme sortie l'état caché $h_{out}$ ainsi que $\hat{y}_t$ qui sera comparé avec $y_t$ la sortie attendue au temps $t$. Le $layer$ sert aussi lors de la phase de rétropropagation.}
+\label{layer}
+\end{center}
+\end{figure}
+
+Enfin la dernière méthode est de ne pas utiliser d'algorithme "général" permettant de passer d'un graphe récurrent à un graphe acyclique. Mais plutôt d'écrire pour chaque architecture de réseau une fonction dépliant ce réseau. Une telle fonction contiendra principalement une boucle créant les n\oe{}uds nécessaires pour chaque temps.
+
+Devant la diversité des architectures des réseaux récurrents, la dernière méthode est la plus sensée et la plus pratique. Elle offre une liberté totale quant à l'architecture du graphe tout en étant relativement simple.
 
 \section{BPTT}
 
@@ -44,7 +64,116 @@ L'algorithme consiste en deux étapes :
 
 La seule difficulté conceptuelle réside donc dans le dépliage.
 
+En pratique, le dépliage est un processus coûteux en temps. Lors de l'apprentissage, on évite donc de déplier un graphe pour chaque exemple d'apprentissage. Pour cela, si cela est possible, on fixe la taille des séquences d'entrée lors de l'apprentissage. Nous pourrons ainsi utiliser le même réseau pour tous les exemples. En outre, comme tous les exemples auront la même taille, nous pourrons les placer dans une matrice comme pour les réseaux feedforward et passer un batch d'exemples en même temps ce qui permet d'accélérer encore les calculs en utilisant pleinement la puissance de \texttt{numpy}.
+
 \section{RTRL}
+
+Détaillons maintenant l'algorithme RTRL qui a une philosophique complètement différente. Au lieu de rétropropager le gradient, nous allons le propager.
+
+Nous nous plaçons dans le cas particulier où le réseau est fully connected comme sur la figure \ref{fully_connected_recurrent_network}. 
+
+\begin{figure}
+\begin{center}
+\input{images/chapter5/fully_connected_recurrent_network.tex}
+\caption{Réseau de neurones récurrent fully connected avec 2 entrées et 3 autres neurones.}
+\label{fully_connected_recurrent_network}
+\end{center}
+\end{figure}
+
+Nous notons $I$ l'ensemble des neurones d'entrée et $U$ l'ensemble des autres neurones. Posons alors une notation unifiant ces deux ensembles : 
+\begin{equation}
+z_k(t) = \left\{
+    \begin{array}{ll}
+        x_k(t) \text{ si } k \in I \\
+        y_k(t-1) \text{ si } k \in U
+    \end{array}
+\right.
+\label{z_k}
+\end{equation}
+avec $y_k(0) = 0$ pour tout $k \in U$.
+
+Posons aussi, $s_k(t)$ la somme pondérée des entrées du neurone $k$ au temps $t$ :
+\begin{equation}
+s_k(t) = \sum_{l \in U \cup I}{w_{k,l}z_l(t)}
+\label{s_k}
+\end{equation}
+
+On a alors :
+$$
+\forall k \in U, y_k(t) = f_k(s_k(t))
+$$
+
+La fonction de coût total est la somme des coûts partiels que l'on calcule à chaque temps $t$ :
+$$
+E = \sum_{t=1}^{n}{E(t)}
+$$
+
+Nous pouvons alors calculer la dérivée du coût partiel au temps $t$, $E(t)$, par rapport à un poids $w_{i,j}$ :
+\begin{equation}
+\frac{\partial E(t)}{\partial w_{i,j}} = \sum_{k \in U}{\frac{\partial E(t)}{\partial y_k(t)}\frac{\partial y_k(t)}{\partial w_{i,j}}}
+\label{E_t}
+\end{equation}
+Le terme $\frac{\partial E(t)}{\partial y_k(t)}$ est connu, il dépend de la fonction de coût utilisé. Pour une fonction de coût quadratique $E(t) = \sum_{k \in U}{(y_k(t) - d_k(t))^2}$ avec $d_k(t)$ la valeur attendue pour $y_k(t)$, on a $\frac{\partial E(t)}{\partial y_k(t)} = 2(y_k(t) - d_k(t))$. 
+
+Il nous reste donc le terme $\frac{\partial y_k(t)}{\partial w_{i,j}}$ à calculer. Déterminons une relation de récurrence entre $\frac{\partial y_k(t+1)}{\partial w_{i,j}}$ et les $(\frac{\partial y_l(t)}{\partial w_{i,j}})_{l\in U}$ :
+$$
+\frac{\partial y_k(t+1)}{\partial w_{i,j}} 
+= \frac{\partial y_k(t+1)}{\partial s_k(t+1)}\frac{\partial s_k(t+1)}{\partial w_{i,j}}
+= f_k'(s_k(t+1))\frac{\partial s_k(t+1)}{\partial w_{i,j}}
+$$
+En utilisant la formule \ref{s_k}, on a alors :
+$$
+\begin{array}{rcl}
+\frac{\partial y_k(t+1)}{\partial w_{i,j}} & 
+= & f_k'(s_k(t+1))\sum_{l \in I \cup U}{\frac{\partial s_k(t+1)}{\partial z_l(t+1)}\frac{\partial z_l(t+1)}{\partial w_{i,j}}+\frac{\partial s_k(t+1)}{\partial w_{k,l}}\frac{\partial w_{k,l}}{\partial w_{i,j}}} \\
+& = & f_k'(s_k(t+1))\left(\sum_{l \in I \cup U}{w_{k,l}\frac{\partial z_l(t+1)}{\partial w_{i,j}}}+\delta_{i,k}z_j(t+1)\right)
+\end{array}
+$$
+Puis en utilisant la formule \ref{z_k}, on a finalement :
+\begin{equation}
+\frac{\partial y_k(t+1)}{\partial w_{i,j}} = f_k'(s_k(t+1))\left(\sum_{l \in U}{w_{k,l}\frac{\partial y_l(t)}{\partial w_{i,j}}}+\delta_{i,k}z_j(t+1)\right)
+\label{y_k_recurrence}
+\end{equation}
+
+Utilisons les formules \ref{E_t} et \ref{y_k_recurrence} pour écrire l'algorithme de propagation du gradient. Dans l'algorithme \ref{RTRL}, $p$ représente les $(\frac{\partial y_k(t)}{\partial w_{i,j}})_{k,i,j}$ et $\epsilon$ les $(\frac{\partial E}{\partial w_{i,j}})_{i,j}$. On effectue la propagation des entrées en même temps que la propagation du gradient.
+
+\begin{algorithm} 
+\begin{algorithmic}
+\Procedure{$propager\_gradient$}{$I, U, w, f, x, d$}
+\State Initialiser un tableau $z$ à 2 dimensions de taille $(n+1, |I \cup U|)$ à $0$.
+\State Initialiser un tableau $s$ de taille $|U|$ à $0$.
+\State Initialiser un tableau $p$ à 3 dimensions de taille $(|U|, |U|, |I \cup U|)$ à $0$.
+\State Initialiser un tableau $\epsilon$ à 2 dimensions de taille $(|U|, |I \cup U|)$ à $0$.
+\For{$t \in \{1, ..., n\}$}
+	\State // Propagation
+	\For{$k \in I$}
+		\State $z[t-1][k] \leftarrow x[t][k]$
+	\EndFor
+	\For{$k \in U$}
+		\State $s[k] \leftarrow \sum_{l \in U \cup I}{w_{k,l}z[t-1][l]}$
+		\State $z[t][k] \leftarrow f_k(s[k])$
+	\EndFor
+	\State // Propagation de l'erreur
+	\For{$k \in U$}
+		\For{$i \in U$}
+			\For{$j \in I \cup U$}
+				\State $p[k][i][j] \leftarrow f_k'(s[k])\left(\sum_{l \in U}{w_{k,l}p[l-1][i][j]+\delta_{i,k}z[t][j]}\right)$
+			\EndFor
+		\EndFor
+	\EndFor
+	\For{$i \in U$}
+		\For{$j \in I \cup U$}
+			\State $\epsilon[i][j] \leftarrow \epsilon[i][j] + \sum_{k \in U}{2(z[t][k]-d[t][k])p[k][i][l]}$
+		\EndFor
+	\EndFor
+\EndFor
+\EndProcedure
+\end{algorithmic} 
+\caption{Algorithme RTRL.}
+\label{RTRL}
+\end{algorithm}
+
+On parle d'apprentissage en temps réel car il est possible d'apprendre après élément de la séquence $x_1, ..., x_n$. Ou bien d'accumuler le gradient sur toute la séquence $x_1, ..., x_n$ comme présenté dans l'algorithme \ref{RTRL}. Notre expérience a montré qu'il était mieux d'accumuler le gradient sur une séquence en entière voire sur des batches de plusieurs séquences.
 
 \section{Évaluation}
 
@@ -62,7 +191,7 @@ Dans un premier temps, nous comparerons ces algorithmes sur l'apprentissage de l
 
 A l'aide de cette automate, nous générerons deux ensembles de mots respectivement afin d'entraîner et de tester notre futur réseau. L'objectif du réseau sera alors d'apprendre cette grammaire afin de prédire les caractères possibles après un caractère donné.
 
-L'étape suivante consistera à tester les algorithmes sur l'apprentissage de la grammaire de Reber symmétrique présentée sur la figure \ref{Grammaire de Reber symmétrique}.  
+L'étape suivante consistera à tester les algorithmes sur l'apprentissage de la grammaire de Reber symmétrique présentée sur la figure \ref{Grammaire de Reber symétrique}.  
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.5]{images/reber_symmetrique.png}
